@@ -30,6 +30,7 @@
 #include "VParse.h"
 #include "VSymTable.h"
 #include "VAst.h"
+#include <cstring>
 
 /* Perl */
 extern "C" {
@@ -53,6 +54,40 @@ public:
     // Callback enables
     bool	m_useVars;	///< Need pin callbacks
 
+    // CALLBACKGEN_H_MEMBERS
+    // CALLBACKGEN_GENERATED_BEGIN - GENERATED AUTOMATICALLY by callbackgen
+    struct {  // Bit packed to help the cache
+    bool m_useCb_attribute:1;
+    bool m_useCb_comment:1;
+    bool m_useCb_endcell:1;
+    bool m_useCb_endinterface:1;
+    bool m_useCb_endmodule:1;
+    bool m_useCb_endpackage:1;
+    bool m_useCb_endparse:1;
+    bool m_useCb_endprogram:1;
+    bool m_useCb_endtaskfunc:1;
+    bool m_useCb_function:1;
+    bool m_useCb_import:1;
+    bool m_useCb_instant:1;
+    bool m_useCb_interface:1;
+    bool m_useCb_keyword:1;
+    bool m_useCb_module:1;
+    bool m_useCb_number:1;
+    bool m_useCb_operator:1;
+    bool m_useCb_package:1;
+    bool m_useCb_parampin:1;
+    bool m_useCb_pin:1;
+    bool m_useCb_port:1;
+    bool m_useCb_preproc:1;
+    bool m_useCb_program:1;
+    bool m_useCb_string:1;
+    bool m_useCb_symbol:1;
+    bool m_useCb_sysfunc:1;
+    bool m_useCb_task:1;
+    bool m_useCb_var:1;
+    };
+    // CALLBACKGEN_GENERATED_END - GENERATED AUTOMATICALLY by callbackgen
+
     VFileLine* cbFilelinep() const { return m_cbFilelinep; }
     void cbFileline(const string& filename, int lineno) { m_cbFilelinep = m_cbFilelinep->create(filename, lineno); }
     void cbFileline(VFileLine* filelinep) { m_cbFilelinep = filelinep; }
@@ -62,9 +97,42 @@ public:
 	: VParse(filelinep, symsp, sigparser, useUnreadback)
 	, m_cbFilelinep(filelinep)
 	, m_useVars(useVars)
-	{}
+	{ set_cb_use(); }
     virtual ~VParserXs() {}
 
+    // CALLBACKGEN_CB_USE
+    // CALLBACKGEN_GENERATED_BEGIN - GENERATED AUTOMATICALLY by callbackgen
+    void set_cb_use() {
+       m_useCb_attribute = true;
+       m_useCb_comment = true;
+       m_useCb_endcell = true;
+       m_useCb_endinterface = true;
+       m_useCb_endmodule = true;
+       m_useCb_endpackage = true;
+       m_useCb_endparse = true;
+       m_useCb_endprogram = true;
+       m_useCb_endtaskfunc = true;
+       m_useCb_function = true;
+       m_useCb_import = true;
+       m_useCb_instant = true;
+       m_useCb_interface = true;
+       m_useCb_keyword = true;
+       m_useCb_module = true;
+       m_useCb_number = true;
+       m_useCb_operator = true;
+       m_useCb_package = true;
+       m_useCb_parampin = true;
+       m_useCb_pin = true;
+       m_useCb_port = true;
+       m_useCb_preproc = true;
+       m_useCb_program = true;
+       m_useCb_string = true;
+       m_useCb_symbol = true;
+       m_useCb_sysfunc = true;
+       m_useCb_task = true;
+       m_useCb_var = true;
+   }
+    // CALLBACKGEN_GENERATED_END - GENERATED AUTOMATICALLY by callbackgen
     // CALLBACKGEN_H_VIRTUAL
     // CALLBACKGEN_GENERATED_BEGIN - GENERATED AUTOMATICALLY by callbackgen
     // Verilog::Parser Callback methods
@@ -101,6 +169,7 @@ public:
 	, const string& data_type, const string& array, const string& value);
     // CALLBACKGEN_GENERATED_END - GENERATED AUTOMATICALLY by callbackgen
 
+    void useCbEna(const char* name, bool flag);
     void call(string* rtnStrp, int params, const char* method, ...);
 };
 
@@ -252,6 +321,18 @@ PROTOTYPE: $$
 CODE:
 {
     THIS->callbackMasterEna(flag);
+}
+
+#//**********************************************************************
+#// self->_use_cb(name,flag)
+#// Turn off specified callback
+
+void
+VParserXs::_use_cb(const char* name, bool flag)
+PROTOTYPE: $$$
+CODE:
+{
+    THIS->useCbEna(name,flag);
 }
 
 #//**********************************************************************
