@@ -5,11 +5,13 @@ indicates the contributor was also the author of the fix; Thanks!
 
 * Verilog::Language 3.21***
 
-***	Add SigParser->new(use_vars=>0) option to speed parsing.
+***	Several code speedups to vhier, Verilog::Netlist, and the parsers.
 
 ***	Add Verilog::Preproc::getall to fetch all text instead of line-by-line.
 
-***	Several internal speedups to vhier and Verilog::Netlist.
+***	Add Parser->new(use_cb_{name}=>0) option to speed parsing.
+
+***	Add SigParser/Netlist->new(use_vars=>0) option to speed parsing.
 
 ****	Fix deep defines causing flex scanner overflows. [Brad Dobbie]
 
